--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>Darren Tan</h1>
+								<p>Hello! I am a PhD student working on volcano seismology and infrasound at the <a href="https://www.uaf.edu/uaf/">University of Alaska Fairbanks</a><br />
+								At UAF, I am affiliated with the <a href="https://www.gi.alaska.edu/">Geophysical Institute</a> and the <a href="https://avo.alaska.edu/">Alaska Volcano Observatory</a>.</p>
 							</div>
 						</div>
 						<nav>
