--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Darren Tan</h1>
-								<p>Hello! I am a PhD student working on volcano seismology and infrasound at the <a href="https://www.uaf.edu/uaf/">University of Alaska Fairbanks</a><br />
-								At UAF, I am affiliated with the <a href="https://www.gi.alaska.edu/">Geophysical Institute</a> and the <a href="https://avo.alaska.edu/">Alaska Volcano Observatory</a>. My research work contributes toward the <a href="https://sites.google.com/alaska.edu/preeventseruptionforecasting/PREEVENTS">NSF-PREEVENTS Eruption Forecasting project</a>. </p>
+								<p>Hello! I am a PhD student working on volcano seismology and infrasound at the <a href="https://www.uaf.edu/uaf/">University of Alaska Fairbanks</a>.<br />
+								At UAF, I am affiliated with the <a href="https://www.gi.alaska.edu/">Geophysical Institute</a> and the <a href="https://avo.alaska.edu/">Alaska Volcano Observatory</a>.<br />
+								My research work contributes toward the <a href="https://sites.google.com/alaska.edu/preeventseruptionforecasting/PREEVENTS">NSF-PREEVENTS Eruption Forecasting project</a>.</p>
 							</div>
 						</div>
 						<nav>
