--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-mountain"></span>
+							<span class="icon fa-water"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
 								<h1>Darren Tan</h1>
-								<p>Hello! I am a PhD student working on volcano seismology and infrasound at the <a href="https://www.uaf.edu/uaf/">University of Alaska Fairbanks</a>.<br />
+								<p>I am a PhD student working on volcano seismology and infrasound at the <a href="https://www.uaf.edu/uaf/">University of Alaska Fairbanks</a>.<br />
 								At UAF, I am affiliated with the <a href="https://www.gi.alaska.edu/">Geophysical Institute</a> and the <a href="https://avo.alaska.edu/">Alaska Volcano Observatory</a>.<br />
 								My research work contributes toward the <a href="https://sites.google.com/alaska.edu/preeventseruptionforecasting/PREEVENTS">NSF-PREEVENTS Eruption Forecasting project</a>.</p>
 							</div>
@@ -44,16 +44,16 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Intro -->
-							<article id="intro">
+						<!-- Research -->
+							<article id="research">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
 							</article>
 
-						<!-- Work -->
-							<article id="work">
+						<!-- CV -->
+							<article id="cv">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
