--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="darren_long.JPG" alt="" /></span>
+								<span class="image main"><img src="images/darren_long.JPG" alt="" /></span>
 								<p>Welcome to my website! I am a Geophysics PhD student at UAF. My work is focused on...</p>
 								<p>In volcano seismology, mention some motivations for my work here.</p>
 								<p>Share my long term aspirations here.</p>
