--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 								<h1>Darren Tan</h1>
 								<p>I am a PhD student working on volcano seismology and infrasound at the <a href="https://www.uaf.edu/uaf/">University of Alaska Fairbanks</a>.<br />
 								At UAF, I am affiliated with the <a href="https://www.gi.alaska.edu/">Geophysical Institute</a> and the <a href="https://avo.alaska.edu/">Alaska Volcano Observatory</a>.<br />
-								My research work contributes toward the <a href="https://sites.google.com/alaska.edu/preeventseruptionforecasting/PREEVENTS">NSF-PREEVENTS Eruption Forecasting project</a>.</p>
+								My PhD research contributes toward the larger <a href="https://sites.google.com/alaska.edu/preeventseruptionforecasting/PREEVENTS">NSF-PREEVENTS Eruption Forecasting project</a>.</p>
 							</div>
 						</div>
 						<nav>
@@ -47,28 +47,41 @@
 						<!-- Research -->
 							<article id="research">
 								<h2 class="major">Research</h2>
-								<p>Volcanic earthquake catalogs are an essential data product used to interpret subsurface volcanic activity and forecast eruptions. Advances in detection techniques (e.g. matched filtering, machine learning) and relative relocation tools have improved catalog completeness and refined event locations. However, due to complexities in operationalizing, automating, and calibrating such techniques, volcano observatories have yet to incorporate them into their operational workflows. In an effort to streamline the integration of catalog-enhancing tools at AVO, we have integrated three popular open-source algorithms: REDPy (Hotovec-Ellis & Jeffries, 2016), EQcorrscan (Chamberlain et al., 2018) and GrowClust (Trugman & Shearer, 2017). </a>.</p>
+								<h2 class="minor">Seismic Catalog Enhancement</h2>
+								<p>Volcanic earthquake catalogs are an essential data product used to interpret subsurface volcanic activity and forecast eruptions. Advances in detection techniques (e.g. matched filtering, machine learning) and relative relocation tools have improved catalog completeness and refined event locations. However, due to complexities in operationalizing, automating, and calibrating such techniques, volcano observatories have yet to incorporate them into their operational workflows. In an effort to streamline the integration of catalog-enhancing tools at Alaska Volcano Observatory (AVO), me and my collaborators have integrated three popular open-source algorithms: REDPy (Hotovec-Ellis & Jeffries, 2016), EQcorrscan (Chamberlain et al., 2018) and GrowClust (Trugman & Shearer, 2017) into a single workflow. After implementing it on several test volcano datasets, we find that our workflow provides at least a two-fold increase in the number of events and relates the event clusters and temporal progressions to relevant volcanic activity. Sensitivity tests are also conducted to ensure that the thresholds used for increased detectability do not compromise detection reliability.</a>.</p>
 								<span class="image main"><img src="images/relocated_catalog_N852.jpg" alt="" /></span>
-								<p>The figure above shows an enhanced catalog produced from the 2012-2013 deep swarm sequence at Mammoth Mountain, derived from my workflow.</p>
+								<p>Most recently, we implemented our workflow on the 2012-2013 deep swarm sequence at Mammoth Mountain, California. The figure above shows the relocated hypocenters produced from our catalog-enhancing workflow. By plotting the hypocenters by their respective event times, we illuminate the migration of seismic activity up and around a low velocity zone in the subsurface. (More details to follow)</p>
 							</article>
 
 						<!-- CV -->
 							<article id="cv">
 								<h2 class="major">CV</h2>
-								<h2 class="minor">PhD Research</h2>
-								<p>Catalog enhancement stuff goes here.</p>
-								<h2 class="minor">Undergraduate Research</h2>
-								<p>CMM vs repose time stuff here, webcam deformation, sprite, balloon glider stuff</p>
+								<h2 class="minor">Education</h2>
+								<p>University of Alaska Fairbanks (UAF) | Fairbanks, AK, USA | August 2020 -<br>PhD in Geophysics </p>
+								<p>Nanyang Technological University (NTU) | Singapore | August 2016 - May 2020<br>BSc in Environmental Earth Systems Science</p>
+								<h2 class="minor">Research Projects</h2>
+								<p>Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools</p>
+								<p>Exploring the relationship between repose time and cumulative moment magnitude for volcanoes worldwide</p>
+								<p>Balloon-glider drone hybrid for volcano surveillance</p>
+								<p>Rate and characteristic of sprites around Singapore through automated event detection</p>
+								<p>Mining web-camera archives for volcanic deformation signals</p>
+								<h2 class="minor">Teaching Experience</h2>
+								<p>Computational Earth Systems Science at NTU</p>
+								<h2 class="minor">Publications</h2>
+								<p>Hopefully soon...</p>
+								<h2 class="minor">Conference Presentations</h2>
+								<p>AGU 2019</p>
+								<p>AOGS 2016</p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/darren_long.JPG" alt="" /></span>
-								<p>Welcome to my website! I am a Geophysics PhD student at UAF. My work is focused on...</p>
-								<p>In volcano seismology, mention some motivations for my work here.</p>
-								<p>Share my long term aspirations here.</p>
-								<p>Outside of work, I dance.</p>
+								<p>Welcome to my website! I am a Geophysics PhD student at UAF. My work is focused on volcano seismology and infrasound, where I... do some science. </p>
+								<p>I am primarily motivated by... my motivations.</p>
+								<p>In the long run, I hope to... educate populations at risk about volcanic hazards and inspire future volcanologists</p>
+								<p>Outside of work, I live in a log cabin.</p>
 							</article>
 
 						<!-- Contact -->
