--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<article id="cv">
 								<h2 class="major">CV</h2>
 								<h2 class="minor">Education</h2>
-								<p>University of Alaska Fairbanks (UAF) | Fairbanks, AK, USA | August 2020 -<br>PhD in Geophysics </p>
+								<p>University of Alaska Fairbanks (UAF) | Fairbanks, AK, USA | August 2020 - current<br>PhD in Geophysics </p>
 								<p>Nanyang Technological University (NTU) | Singapore | August 2016 - May 2020<br>BSc in Environmental Earth Systems Science</p>
 								<h2 class="minor">Research Projects</h2>
 								<p>Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools</p>
