--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/darren_long.JPG" alt="" /></span>
-								<p>Welcome to my website! I am a Geophysics PhD student at UAF. My work is focused on volcano seismology and infrasound, where I... do some science. </p>
-								<p>I am primarily motivated by... my motivations.</p>
-								<p>In the long run, I hope to... educate populations at risk about volcanic hazards and inspire future volcanologists</p>
-								<p>Outside of work, I live in a log cabin.</p>
+								<p>Welcome to my website! I am a Geophysics PhD student at UAF. My work is focused on volcano seismology and infrasound, where I... look at wiggles. (To be updated)</p>
+								<p>I am primarily motivated by... my motivations. (To be updated)</p>
+								<p>In the long run, I hope to... educate populations at risk about volcanic hazards and inspire future volcanologists. (To be updated)</p>
+								<p>Outside of work, I live in a log cabin. (To be updated)</p>
 							</article>
 
 						<!-- Contact -->
