--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 								<h1>Darren Tan</h1>
 								<p>I am a PhD student working on volcano seismology and infrasound at the <a href="https://www.uaf.edu/uaf/">University of Alaska Fairbanks</a>.<br />
 								I am affiliated with the <a href="https://www.gi.alaska.edu/">Geophysical Institute</a> and the <a href="https://avo.alaska.edu/">Alaska Volcano Observatory</a>.<br />
-								My PhD research contributes toward the larger <a href="https://sites.google.com/alaska.edu/preeventseruptionforecasting/PREEVENTS">NSF-PREEVENTS Eruption Forecasting project</a>.<br />
-								I am still trying to build this webpage.</p>
+								My PhD research contributes toward the larger <a href="https://sites.google.com/alaska.edu/preeventseruptionforecasting/PREEVENTS">NSF-PREEVENTS Eruption Forecasting project</a>.</p>
 							</div>
 						</div>
 						<nav>
@@ -49,7 +48,7 @@
 							<article id="research">
 								<h2 class="major">Research</h2>
 								<h2 class="minor">Seismic Catalog Enhancement</h2>
-								<p>Volcanic earthquake catalogs are an essential data product used to interpret subsurface volcanic activity and forecast eruptions. Advances in detection techniques (e.g. matched filtering, machine learning) and relative relocation tools have improved catalog completeness and refined event locations. However, due to complexities in operationalizing, automating, and calibrating such techniques, volcano observatories have yet to incorporate them into their operational workflows. In an effort to streamline the integration of catalog-enhancing tools at Alaska Volcano Observatory (AVO), me and my collaborators have integrated three popular open-source algorithms: REDPy (Hotovec-Ellis & Jeffries, 2016), EQcorrscan (Chamberlain et al., 2018) and GrowClust (Trugman & Shearer, 2017) into a single workflow. After implementing it on several test volcano datasets, we find that our workflow provides at least a two-fold increase in the number of events and relates the event clusters and temporal progressions to relevant volcanic activity. Sensitivity tests are also conducted to ensure that the thresholds used for increased detectability do not compromise detection reliability.</a>.</p>
+								<p>Volcanic earthquake catalogs are an essential data product used to interpret subsurface volcanic activity and forecast eruptions. Advances in detection techniques (e.g. matched filtering, machine learning) and relative relocation tools have improved catalog completeness and refined event locations. However, due to complexities in operationalizing, automating, and calibrating such techniques, volcano observatories have yet to incorporate them into their operational workflows. In an effort to streamline the integration of catalog-enhancing tools at Alaska Volcano Observatory (AVO), me and my collaborators have combined three popular open-source algorithms: REDPy (Hotovec-Ellis & Jeffries, 2016), EQcorrscan (Chamberlain et al., 2018) and GrowClust (Trugman & Shearer, 2017) into a single workflow. We find that our workflow significantly increases the number of detected events and event clusters at our test volcanoes, and that it provides insights into the temporal seismic trends related to volcanic activity.</a>.</p>
 								<span class="image main"><img src="images/relocated_catalog_N852.jpg" alt="" /></span>
 								<p>Most recently, we implemented our workflow on the 2012-2013 deep swarm sequence at Mammoth Mountain, California. The figure above shows the relocated hypocenters produced from our catalog-enhancing workflow. By plotting the hypocenters by their respective event times, we illuminate the migration of seismic activity up and around a low velocity zone in the subsurface. (More details to follow)</p>
 							</article>
