--- a/index.html
+++ b/index.html
@@ -74,27 +74,35 @@
 								<h2 class="minor">Education</h2>
 								<p>University of Alaska Fairbanks | Fairbanks, AK, USA | August 2020 - current<br>PhD in Geophysics </p>
 								<p>Nanyang Technological University (NTU) | Singapore | August 2016 - May 2020<br>BSc in Environmental Earth Systems Science</p>
-								<h2 class="minor">Research Projects</h2>
-								<p>Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools</p>
-								
-								<p>Exploring the relationship between repose time and cumulative moment magnitude for volcanoes worldwide</p>
-								<p>Balloon-glider drone hybrid for volcano surveillance</p>
-								<p>Rate and characteristic of sprites around Singapore through automated event detection</p>
-								<p>Mining web-camera archives for volcanic deformation signals</p>
+								<h2 class="minor">Graduate Research Projects</h2>
+								<p>Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools<br/>
+								Advised by David Fee, in collaboration with PREEVENTS collaborators Alicia Hotovec-Ellis, Jeremy Pesicek, Matt Haney, John Power, Társilo Girona.</p>
+								</p>
+								<h2 class="minor">Undergraduate Research Projects</h2>
+								<p>Exploring the relationship between repose time and cumulative moment magnitude for volcanoes worldwide<br/>
+								Advised by Jeremy Pesicek and Jay Wellik at Cascades Volcano Observatory, USGS (Jun 2019 - Dec 2019)</p>
+								<p>Balloon-glider drone hybrid for volcano surveillance<br/>
+								Advised by Benoit Taisne at Earth Observatory of Singapore (May 2018 - Aug 2018)</p>
+								<p>Rate and characteristics of sprites around Singapore through automated event detection<br/>
+								Advised by Benoit Taisne and Anna Perttu at Earth Observatory of Singapore (Aug 2017 - Apr 2018)</p>
+								<p>Mining web-camera archives for volcanic deformation signals<br/>
+								Supervised by Benoit Taisne and Fabio Manta at Earth Observatory of Singapore (Jan 2017 - Apr 2017)</p>
 								<h2 class="minor">Teaching Experience</h2>
-								<p>Computational Earth Systems Science at NTU</p>
+								<p>ES2001 - Computational Earth Systems Science | NTU | Fall 2018<br/>
+								Teaching Assistant</p>
 								<h2 class="minor">Publications</h2>
-								<p>Hopefully soon...</p>
+								<p><i>Hopefully soon!</i></p>
 								<h2 class="minor">Conference Presentations</h2>
-								<p>AGU 2019</p>
-								<p>AOGS 2016</p>
+								<p>Tan, D., Fee, D., Hotovec-Ellis, A. J., Pesicek, J. D., Haney, M. M., Power, J. A. & Girona, T. (2021). Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools. Abstract V25D-0134 presented at 2021 AGU Fall Meeting, New Orleans, LA. (poster)</p>
+								<p>Tan, D., Wellik, J., Pesicek, J. D., Ogburn, S. E., & Thelen, W. A. (2019). Exploring the relationship between repose time and cumulative moment magnitude for volcanoes worldwide. Abstract V51K-0241 presented at 2019 AGU Fall Meeting, San Francisco, CA. (poster)</p>
+								<p>Tan, D., Manta, F., & Taisne, B. (2017). Mining web-camera archives for volcanic deformation signals. Abstract SE10-A009 presented at AOGS Fall Meeting 2017, Singapore, Singapore (poster)</p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/darren_long.JPG" alt="" /></span>
-								<p>Welcome to my website! I am a Geophysics PhD student at UAF. My work is focused on volcano seismology and infrasound, where I... look at wiggles. (To be updated)</p>
+								<p>Welcome to my website! I am a Geophysics PhD student at UAF. My work is focused on volcano seismology and infrasound, where I look at wiggles. (To be updated)</p>
 								<p>I am primarily motivated by... my motivations. (To be updated)</p>
 								<p>In the long run, I hope to... educate populations at risk about volcanic hazards and inspire future volcanologists. (To be updated)</p>
 								<p>Outside of work, I live in a log cabin. (To be updated)</p>
