--- a/index.html
+++ b/index.html
@@ -72,30 +72,24 @@
 							<article id="cv">
 								<h2 class="major">CV</h2>
 								<h2 class="minor">Education</h2>
-								<p>University of Alaska Fairbanks | Fairbanks, AK, USA | August 2020 - current<br>PhD in Geophysics </p>
-								<p>Nanyang Technological University (NTU) | Singapore | August 2016 - May 2020<br>BSc in Environmental Earth Systems Science</p>
+								<p><b>University of Alaska Fairbanks (UAF)</b>| Fairbanks, AK, USA | August 2020 - current<br>PhD in Geophysics </p>
+								<p><b>Nanyang Technological University (NTU)</b> | Singapore | August 2016 - May 2020<br>BSc in Environmental Earth Systems Science</p>
 								<h2 class="minor">Graduate Research Projects</h2>
-								<p>Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools<br/>
-								Advised by David Fee, in collaboration with PREEVENTS collaborators Alicia Hotovec-Ellis, Jeremy Pesicek, Matt Haney, John Power, Társilo Girona.</p>
-								</p>
+								<p><b>Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools </b>| Advised by David Fee, in collaboration with PREEVENTS collaborators Alicia Hotovec-Ellis, Jeremy Pesicek, Matt Haney, John Power, Társilo Girona </p>
 								<h2 class="minor">Undergraduate Research Projects</h2>
-								<p>Exploring the relationship between repose time and cumulative moment magnitude for volcanoes worldwide<br/>
-								Advised by Jeremy Pesicek and Jay Wellik at Cascades Volcano Observatory, USGS (Jun 2019 - Dec 2019)</p>
-								<p>Balloon-glider drone hybrid for volcano surveillance<br/>
-								Advised by Benoit Taisne at Earth Observatory of Singapore (May 2018 - Aug 2018)</p>
-								<p>Rate and characteristics of sprites around Singapore through automated event detection<br/>
-								Advised by Benoit Taisne and Anna Perttu at Earth Observatory of Singapore (Aug 2017 - Apr 2018)</p>
-								<p>Mining web-camera archives for volcanic deformation signals<br/>
-								Supervised by Benoit Taisne and Fabio Manta at Earth Observatory of Singapore (Jan 2017 - Apr 2017)</p>
+								<p><b>Exploring the relationship between repose time and cumulative moment magnitude for volcanoes worldwide</b> |Advised by Jeremy Pesicek and Jay Wellik at Cascades Volcano Observatory, USGS | Jun 2019 - Dec 2019</p>
+								<p><b>Balloon-glider drone hybrid for volcano surveillance</b> | Advised by Benoit Taisne at Earth Observatory of Singapore | May 2018 - Aug 2018</p>
+								<p><b>Rate and characteristics of sprites around Singapore through automated event detection</b>| Advised by Benoit Taisne and Anna Perttu at Earth Observatory of Singapore | Aug 2017 - Apr 2018</p>
+								<p><b>Mining web-camera archives for volcanic deformation signals</b> | Advised by Benoit Taisne and Fabio Manta at Earth Observatory of Singapore | Jan 2017 - Apr 2017</p>
 								<h2 class="minor">Teaching Experience</h2>
-								<p>ES2001 - Computational Earth Systems Science | NTU | Fall 2018<br/>
+								<p><b>ES2001 - Computational Earth Systems Science</b> | NTU | Fall 2018<br/>
 								Teaching Assistant</p>
 								<h2 class="minor">Publications</h2>
 								<p><i>Hopefully soon!</i></p>
 								<h2 class="minor">Conference Presentations</h2>
-								<p>Tan, D., Fee, D., Hotovec-Ellis, A. J., Pesicek, J. D., Haney, M. M., Power, J. A. & Girona, T. (2021). Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools. Abstract V25D-0134 presented at 2021 AGU Fall Meeting, New Orleans, LA. (poster)</p>
-								<p>Tan, D., Wellik, J., Pesicek, J. D., Ogburn, S. E., & Thelen, W. A. (2019). Exploring the relationship between repose time and cumulative moment magnitude for volcanoes worldwide. Abstract V51K-0241 presented at 2019 AGU Fall Meeting, San Francisco, CA. (poster)</p>
-								<p>Tan, D., Manta, F., & Taisne, B. (2017). Mining web-camera archives for volcanic deformation signals. Abstract SE10-A009 presented at AOGS Fall Meeting 2017, Singapore, Singapore (poster)</p>
+								<p><b>Tan, D.</b>, Fee, D., Hotovec-Ellis, A. J., Pesicek, J. D., Haney, M. M., Power, J. A. & Girona, T. (2021). Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools. Abstract V25D-0134 presented at 2021 AGU Fall Meeting, New Orleans, LA. (poster)</p>
+								<p><b>Tan, D.</b>, Wellik, J., Pesicek, J. D., Ogburn, S. E., & Thelen, W. A. (2019). Exploring the relationship between repose time and cumulative moment magnitude for volcanoes worldwide. Abstract V51K-0241 presented at 2019 AGU Fall Meeting, San Francisco, CA. (poster)</p>
+								<p><b>Tan, D.</b>, Manta, F., & Taisne, B. (2017). Mining web-camera archives for volcanic deformation signals. Abstract SE10-A009 presented at AOGS Fall Meeting 2017, Singapore, Singapore (poster)</p>
 							</article>
 
 						<!-- About -->
