--- a/index.html
+++ b/index.html
@@ -90,6 +90,16 @@
 								<p><b>Tan, D.</b>, Fee, D., Hotovec-Ellis, A. J., Pesicek, J. D., Haney, M. M., Power, J. A. & Girona, T. (2021). Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools. Abstract V25D-0134 presented at 2021 AGU Fall Meeting, New Orleans, LA. (poster)</p>
 								<p><b>Tan, D.</b>, Wellik, J., Pesicek, J. D., Ogburn, S. E., & Thelen, W. A. (2019). Exploring the relationship between repose time and cumulative moment magnitude for volcanoes worldwide. Abstract V51K-0241 presented at 2019 AGU Fall Meeting, San Francisco, CA. (poster)</p>
 								<p><b>Tan, D.</b>, Manta, F., & Taisne, B. (2017). Mining web-camera archives for volcanic deformation signals. Abstract SE10-A009 presented at AOGS Fall Meeting 2017, Singapore, Singapore (poster)</p>
+								<h2 class="minor">Awards</h2>
+								<p>Undergraduate Research Experience Residential Mentor Award (2017)</p><br />
+								<p><i>conferred by the CN Yang Scholars Program, Nanyang Technological University</i></p>
+								<p>Nanyang Scholarship under the CN Yang Scholars Program (2016)</p><br />
+								<p><i>conferred by Nanyang Technological University</i></p>
+								<p>Full-time National Servicemen of the Year Award (2016)</p><br />
+								<p><i>conferred by the Singapore Armed Forces</i></p>
+								<h2 class="minor">Fieldwork Experience</h2>
+								<p>Geophysical station maintenance | Akutan/Unalaska/Unimak islands, AK, USA | Jun 2021 - Jul 2021</p>
+								<p>Geological Mapping | Cerro Gordo/Mono Lake/Panum Crater, CA, USA | May 2019 - Jun 2019</p>
 							</article>
 
 						<!-- About -->
