--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
 								<h2 class="major">Research</h2>
 								<h2 class="minor">Seismic Catalog Enhancement</h2>
 								<p>Volcanic earthquake catalogs are an essential data product used to interpret subsurface volcanic activity and forecast eruptions. Advances in detection techniques (e.g. matched filtering, machine learning) and relative relocation tools have improved catalog completeness and refined event locations. However, due to complexities in operationalizing, automating, and calibrating such techniques, volcano observatories have yet to incorporate them into their operational workflows. In an effort to streamline the integration of catalog-enhancing tools at Alaska Volcano Observatory (AVO), me and my collaborators have combined three popular open-source algorithms: REDPy (Hotovec-Ellis & Jeffries, 2016), EQcorrscan (Chamberlain et al., 2018) and GrowClust (Trugman & Shearer, 2017) into a single workflow (Fig 1). We find that our workflow significantly increases the number of detected events and event clusters at our test volcanoes, and that it provides insights into the temporal seismic trends related to volcanic activity.</a>.</p>
-								<span class="image main"><img src="images/workflow.png" alt="" /></span><br />
+								<span class="image main"><img src="images/workflow.png" alt="" /></span>
 								<p>Fig 1. Workflow encompassing REDPY (red dotted box), EQcorrscan (green dotted boxes) and GrowClust (blue dotted box). Light gray lines represent optional utilities, which include the incorporation of campaign data, magnitude calculation, and frequency index calculation.</p>
 								<p>In order to calibrate the input parameters of each leg of our workflow, we carefully implemented our workflow on the 2012-2013 deep swarm sequence at Mammoth Mountain, California, and made comparisons to a previous work done by Hotovec-Ellis et al. (2018). Fig 2 below shows the relocated hypocenters colored by the frequency index of each event (a proxy of the frequency content of each earthquake). We illuminate the migration of seismic activity up and around a low velocity zone in the subsurface, and show the similarities between our results and that of Hotovec-Ellis et al. (2018).</p>
 								<span class="image main"><img src="images/mammoth_top.png" alt="" /></span>
-								<span class="image main"><img src="images/mammoth_btm.png" alt="" /></span><br />
+								<span class="image main"><img src="images/mammoth_btm.png" alt="" /></span>
 								<p>Fig 2. Hypocenter plots produced from our workflow for the 2012-2013 deep swarm sequence in Mammoth Mountain, California (top and bottom left, with cross-sections A-B and C-D). The cross sections are compared with the results published in Hotovec-Ellis et al. (2018) (bottom right, cross-sections A-A' and B-B'). Red arrows illustrate macroscopic similarities in the migration of high frequency events.</p>
 								<p>We are currently implementing our workflow on Alaska volcanoes shortlisted in the <a href="https://sites.google.com/alaska.edu/preeventseruptionforecasting/PREEVENTS">NSF-PREEVENTS Eruption Forecasting project</a>, and we hope to release our code as an open-soruce package on Github after further optimization efforts.</p>
 								<h2 class="minor">Cumulative Moment Magnitude vs Repose Time</h2>
 								<p>Analysing earthquakes induced by volcanic activity is critical for eruption forecasting as they shed light on magma movement underneath the volcano’s edifice. In previous work by Thelen et al. (2010), the relationship between repose time of eruptions and cumulative moment magnitude of precursor seismicity was studied across 5 stratovolcanoes (Fig 3). These two parameters demonstrated a potentially linear trend in log-log space, and it was proposed that the continual growth of volcanic plugs over longer repose times creates increasingly competent conduit features which impede magma ascent. Overcoming the obstructions to magma ascent would involve greater seismicity and hence a higher CMM.
-								<span class="image main"><img src="images/thelen.png" alt="" /></span><br />
+								<span class="image main"><img src="images/thelen.png" alt="" /></span>
 								<p>Fig 3. Plot of CMM vs repose time, which shows eruptions from Mt. St. Helens, Bezymianny and select Alaskan volcanoes. Diffuse ovals depict general trends for each dataset. Figure obtained from Thelen et al. (2010)</p>
 								<p>We revisit this study with improved explosion chronologies from the Eruption Forecasting Information System database across 10 volcanoes that have demonstrated long dormancies (~20 years) prior to reactivation. The resultant R2 value for all data points on the revised log-log plot (Fig 4) is 0.62 while the R2 values for individual volcanoes, where applicable, range from 0.54 to 0.84.
-								<span class="image main"><img src="images/CMMRT.png" alt="" /></span><br />
+								<span class="image main"><img src="images/CMMRT.png" alt="" /></span>
 								<p>Fig 4. Plot of CMM vs repose time, with regression lines drawn across volcano-specific datasets with 5 valid points. An interesting observation would be the shallower slopes for Redoubt and Augustine, which have the lowest maximum repose times among the volcanoes.</p>
 								<p>The CMM vs repose time plots enable volcano specific explosion behaviour to be characterized by their seismic precursors, and they can be used to make probabilistic estimates of volcanic explosions for future seismic swarms (Fig 5).</p>
-								<span class="image main"><img src="images/CMMRT_swarms.png" alt="" /></span><br />
+								<span class="image main"><img src="images/CMMRT_swarms.png" alt="" /></span>
 								<p>Fig 5. Plot of CMM vs repose time, with a focus on Redoubt and Augustine. Regression lines and their respective 68% prediction intervals are indicated for each volcano. Swarms mined from each volcano’s earthquake catalog are illustrated via the chronological progression of CMM and repose time The only explosive swarm is drawn in red.</p>
 							</article>
 
@@ -75,11 +75,11 @@
 								<p><b>University of Alaska Fairbanks (UAF)</b>| Fairbanks, AK, USA | August 2020 - current<br>PhD in Geophysics </p>
 								<p><b>Nanyang Technological University (NTU)</b> | Singapore | August 2016 - May 2020<br>BSc in Environmental Earth Systems Science</p>
 								<h2 class="minor">Graduate Research Projects</h2>
-								<p><b>Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools </b>| Advised by David Fee, in collaboration with PREEVENTS collaborators Alicia Hotovec-Ellis, Jeremy Pesicek, Matt Haney, John Power, Társilo Girona </p>
+								<p><b>Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools</b> | Advised by David Fee, in collaboration with PREEVENTS collaborators Alicia Hotovec-Ellis, Jeremy Pesicek, Matt Haney, John Power, Társilo Girona </p>
 								<h2 class="minor">Undergraduate Research Projects</h2>
-								<p><b>Exploring the relationship between repose time and cumulative moment magnitude for volcanoes worldwide</b> |Advised by Jeremy Pesicek and Jay Wellik at Cascades Volcano Observatory, USGS | Jun 2019 - Dec 2019</p>
+								<p><b>Exploring the relationship between repose time and cumulative moment magnitude for volcanoes worldwide</b> | Advised by Jeremy Pesicek and Jay Wellik at Cascades Volcano Observatory, USGS | Jun 2019 - Dec 2019</p>
 								<p><b>Balloon-glider drone hybrid for volcano surveillance</b> | Advised by Benoit Taisne at Earth Observatory of Singapore | May 2018 - Aug 2018</p>
-								<p><b>Rate and characteristics of sprites around Singapore through automated event detection</b>| Advised by Benoit Taisne and Anna Perttu at Earth Observatory of Singapore | Aug 2017 - Apr 2018</p>
+								<p><b>Rate and characteristics of sprites around Singapore through automated event detection</b> | Advised by Benoit Taisne and Anna Perttu at Earth Observatory of Singapore | Aug 2017 - Apr 2018</p>
 								<p><b>Mining web-camera archives for volcanic deformation signals</b> | Advised by Benoit Taisne and Fabio Manta at Earth Observatory of Singapore | Jan 2017 - Apr 2017</p>
 								<h2 class="minor">Teaching Experience</h2>
 								<p><b>ES2001 - Computational Earth Systems Science</b> | NTU | Fall 2018<br/>
@@ -91,15 +91,17 @@
 								<p><b>Tan, D.</b>, Wellik, J., Pesicek, J. D., Ogburn, S. E., & Thelen, W. A. (2019). Exploring the relationship between repose time and cumulative moment magnitude for volcanoes worldwide. Abstract V51K-0241 presented at 2019 AGU Fall Meeting, San Francisco, CA. (poster)</p>
 								<p><b>Tan, D.</b>, Manta, F., & Taisne, B. (2017). Mining web-camera archives for volcanic deformation signals. Abstract SE10-A009 presented at AOGS Fall Meeting 2017, Singapore, Singapore (poster)</p>
 								<h2 class="minor">Awards</h2>
-								<p>Undergraduate Research Experience Residential Mentor Award (2017)</p><br />
-								<p><i>conferred by the CN Yang Scholars Program, Nanyang Technological University</i></p>
-								<p>Nanyang Scholarship under the CN Yang Scholars Program (2016)</p><br />
-								<p><i>conferred by Nanyang Technological University</i></p>
-								<p>Full-time National Servicemen of the Year Award (2016)</p><br />
-								<p><i>conferred by the Singapore Armed Forces</i></p>
+								<p>Undergraduate Research Experience Residential Mentor Award (2017)<br />
+								<i>conferred by the CN Yang Scholars Program, Nanyang Technological University</i></p>
+								<p>Nanyang Scholarship under the CN Yang Scholars Program (2016)<br />
+								<i>conferred by Nanyang Technological University</i></p>
+								<p>Full-time National Servicemen of the Year Award (2016)<br />
+								<i>conferred by the Singapore Armed Forces</i></p>
 								<h2 class="minor">Fieldwork Experience</h2>
-								<p>Geophysical station maintenance | Akutan/Unalaska/Unimak islands, AK, USA | Jun 2021 - Jul 2021</p>
-								<p>Geological Mapping | Cerro Gordo/Mono Lake/Panum Crater, CA, USA | May 2019 - Jun 2019</p>
+								<p>Geophysical station maintenance | Akutan/Unalaska/Unimak islands, AK, USA <br />
+								Assistant | Jun 2021 - Jul 2021</p>
+								<p>Geological Mapping | Cerro Gordo/Mono Lake/Panum Crater, CA, USA <br />
+								Student | May 2019 - Jun 2019</p>
 							</article>
 
 						<!-- About -->
